# live-agent-remote

./: .gitignore  README.md  SKILL.md  audio_analyzer.py  batch_analyze.py  config.example.py  config.local.py  config.py  mcp_server.py  pyproject.toml  setup.sh
.analysis_cache/: 00003b8bb620d4970db3880858a5d471_full.json  00003b8bb620d4970db3880858a5d471_pitch.json  00046519b7ed106f7f238a97db84b976_full.json  00046519b7ed106f7f238a97db84b976_pitch.json  00074bb8dca89bd8349fc962bc02c2d6_pitch.json  00112e0c05eaa42fffa725accee3e7e7_pitch.json  00115b769a5aa00fa1d1be0350a49484_pitch.json  0011ac505f3699a35ffeffdd6040ccec_full.json  0011ac505f3699a35ffeffdd6040ccec_pitch.json  001915e577e82501412112efe9826f85_pitch.json  001a4ad7d0269d1a1e9e18ed31f0619e_pitch.json  001e1e9697fe0f4d84000368628bb2d6_pitch.json  0024a10b419527da9c8c25936e95a04f_pitch.json  0024f13924ef7bbf38eaf9a6fc08705c_pitch.json  0025124f5611813857926d6206ec3c5c_pitch.json  00253a1331f0ce7dd3b9ef144f9a4489_pitch.json  002874cf27a9f12897fb0b79f0277125_full.json  002874cf27a9f12897fb0b79f0277125_pitch.json  002f79b0ef16264df19c9a6ebf46a891_pitch.json  00302b441f36be3b048c23f61f914cac_pitch.json  0031cdfb197323ad24027bf0a94d3688_pitch.json  003345108f4defbbefb2cd956a083627_pitch.json  00340a6385a93c0eec2362c454c7c25d_pitch.json  0034d35f77da469dbf883a9c12bb7a35_pitch.json  003525e0c3549c670cef67ce4c06c178_full.json  003525e0c3549c670cef67ce4c06c178_pitch.json  00356d207ebc3f96a45f8be15af9ab34_full.json  00356d207ebc3f96a45f8be15af9ab34_pitch.json  00364f37dbf57d8aa4ab3b295fd2d459_pitch.json  00395e8fb26bd0f44955ca57a47af168_pitch.json  0039dd58565db3627f5ad5b14f42bdb5_full.json  0039dd58565db3627f5ad5b14f42bdb5_pitch.json  003a5ae093cfaa45da18911638c54d5e_pitch.json  003b44e3a7b1840121c6c486c4c447dc_pitch.json  003d11f05fddd041b9161117c67f6594_pitch.json  0040380752b9d89ad7af73d98e8d888d_pitch.json  0044304e8a0e3957380f994872114616_full.json  0044304e8a0e3957380f994872114616_pitch.json  0044adec47912422de30a77976815872_pitch.json  0049d68552515b769ef1257cfb11e3b2_full.json  (+43546 more)
LiveAgent/: LiveAgent.py  __init__.py
client/: live_agent_client.js  live_agent_client.py
docs/: mcp-clients.md  security.md  troubleshooting.md
examples/: chord_progression.py  events_demo.py  play_a_beat.py
tests/: conftest.py  (+3 more)
(+3 files in other folders)
